tests/parser-test-files/bad-files/parse-fn.1.error
error: Malformed function
  --> test:4:14
   |
 4 |  (define f (fn))
   |               ^ expected function arguments
